[gd_scene load_steps=20 format=3 uid="uid://djhm61nx72b66"]

[ext_resource type="Theme" uid="uid://crcivs73grrf7" path="res://textures/gui/themes/custom_theme.tres" id="1_bfybv"]
[ext_resource type="Material" uid="uid://dcq7n5qyt3hj0" path="res://materials/immaterial.tres" id="1_tvvdr"]
[ext_resource type="Script" uid="uid://ml36010pk3w6" path="res://gui/settings_menu/settings_menu.gd" id="2_tpe0x"]
[ext_resource type="PackedScene" uid="uid://dleye7m8gjxs0" path="res://gui/components/control_display_button.tscn" id="6_bo706"]
[ext_resource type="PackedScene" uid="uid://c6kh3esjn5743" path="res://gui/tab_menu.tscn" id="6_y8bv3"]
[ext_resource type="Texture2D" uid="uid://bxhwtcxdgtkx6" path="res://textures/gui/keyboard_key.png" id="7_jf5tn"]
[ext_resource type="PackedScene" uid="uid://dveymygjdbsyw" path="res://gui/settings_menu/gameplay_menu.tscn" id="7_y8bv3"]
[ext_resource type="PackedScene" uid="uid://b7cxdla4214kn" path="res://gui/settings_menu/video_menu.tscn" id="8_6q2hq"]
[ext_resource type="PackedScene" uid="uid://cw61jejhmqw73" path="res://gui/settings_menu/audio_menu.tscn" id="9_327te"]
[ext_resource type="PackedScene" uid="uid://bcso2ambvbnge" path="res://gui/settings_menu/controls_menu.tscn" id="10_3v8ln"]

[sub_resource type="InputEventKey" id="InputEventKey_580g3"]
device = -1
physical_keycode = 4194309

[sub_resource type="InputEventJoypadButton" id="InputEventJoypadButton_jf5tn"]
device = -1
button_index = 6
pressed = true

[sub_resource type="Shortcut" id="Shortcut_y8bv3"]
events = [SubResource("InputEventKey_580g3"), SubResource("InputEventJoypadButton_jf5tn")]

[sub_resource type="InputEventKey" id="InputEventKey_6q2hq"]
device = -1
physical_keycode = 88
unicode = 120

[sub_resource type="InputEventJoypadButton" id="InputEventJoypadButton_327te"]
device = -1
button_index = 3
pressed = true

[sub_resource type="Shortcut" id="Shortcut_3v8ln"]
events = [SubResource("InputEventKey_6q2hq"), SubResource("InputEventJoypadButton_327te")]

[sub_resource type="InputEventKey" id="InputEventKey_7312b"]
device = -1
physical_keycode = 4194305

[sub_resource type="InputEventJoypadButton" id="InputEventJoypadButton_6s7of"]
device = -1
button_index = 1
pressed = true

[sub_resource type="Shortcut" id="Shortcut_nwud4"]
events = [SubResource("InputEventKey_7312b"), SubResource("InputEventJoypadButton_6s7of")]

[node name="SettingsMenu" type="Control"]
material = ExtResource("1_tvvdr")
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_bfybv")
script = ExtResource("2_tpe0x")

[node name="SettingsContainer" type="VBoxContainer" parent="."]
use_parent_material = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -190.0
offset_top = -169.5
offset_right = 190.0
offset_bottom = 169.5
grow_horizontal = 2
grow_vertical = 2

[node name="TabMenu" parent="SettingsContainer" instance=ExtResource("6_y8bv3")]
unique_name_in_owner = true
layout_mode = 2
min_tabs = 4

[node name="Gameplay" parent="SettingsContainer/TabMenu" instance=ExtResource("7_y8bv3")]
visible = false
layout_mode = 2

[node name="Video" parent="SettingsContainer/TabMenu" instance=ExtResource("8_6q2hq")]
visible = false
layout_mode = 2

[node name="Audio" parent="SettingsContainer/TabMenu" instance=ExtResource("9_327te")]
visible = false
layout_mode = 2

[node name="Controls" parent="SettingsContainer/TabMenu" instance=ExtResource("10_3v8ln")]
visible = false
layout_mode = 2

[node name="ConfirmButtons" type="HBoxContainer" parent="SettingsContainer"]
use_parent_material = true
layout_mode = 2
theme_override_constants/separation = 1
alignment = 1

[node name="ConfirmButton2" parent="SettingsContainer/ConfirmButtons" instance=ExtResource("6_bo706")]
custom_minimum_size = Vector2(200, 44)
layout_mode = 2
size_flags_horizontal = 3
shortcut = SubResource("Shortcut_y8bv3")
text = "Confirm"
input_action_name = "menu_confirm"

[node name="DefaultButton2" parent="SettingsContainer/ConfirmButtons" instance=ExtResource("6_bo706")]
custom_minimum_size = Vector2(200, 44)
layout_mode = 2
size_flags_horizontal = 3
shortcut = SubResource("Shortcut_3v8ln")
text = "Default"
icon = ExtResource("7_jf5tn")
input_action_name = "default"

[node name="CancelButton" parent="SettingsContainer/ConfirmButtons" instance=ExtResource("6_bo706")]
custom_minimum_size = Vector2(200, 44)
layout_mode = 2
size_flags_horizontal = 3
shortcut = SubResource("Shortcut_nwud4")
text = "Cancel"
input_action_name = "menu_back"

[connection signal="pressed" from="SettingsContainer/ConfirmButtons/ConfirmButton2" to="." method="close_settings_menu"]
[connection signal="pressed" from="SettingsContainer/ConfirmButtons/DefaultButton2" to="." method="default_settings"]
[connection signal="pressed" from="SettingsContainer/ConfirmButtons/CancelButton" to="." method="cancel_settings"]
